# android-voice-core-stt

./: .gitattributes  .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/android_voice_core/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: whisper_bridge.cpp
app/src/main/java/com/example/android_voice_core/: MainActivity.kt  WhisperBridge.kt
app/src/main/java/com/example/android_voice_core/audio/: AudioCapture.kt  AudioTestService.kt
app/src/main/java/com/example/android_voice_core/benchmark/: Benchmark.kt
app/src/main/java/com/example/android_voice_core/stt/: SpeechToText.kt
app/src/main/java/com/example/android_voice_core/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/android_voice_core/wakeword/: WakeWordEngine.kt
app/src/main/java/dev/barrycade/voicecore/: MainActivity.kt
app/src/main/java/dev/barrycade/voicecore/audio/: AudioTestService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/android_voice_core/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
stt/: build.gradle.kts  consumer-rules.pro
stt/src/main/cpp/: CMakeLists.txt  whisper_bridge.cpp
stt/src/main/java/dev/barrycade/voicecore/stt/: AudioCapture.kt  SpeechToText.kt  SttProcessor.kt  VadCalibrationLogger.kt  WhisperBridge.kt
stt/src/test/java/dev/barrycade/voicecore/stt/: PublicApiSmokeTest.kt
